--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,4 +50,12 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="patch"
+        android:id="@+id/button_patch"
+        android:layout_below="@+id/button_put"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
